--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -92,16 +92,15 @@
                 />
 
             <TextView
-                android:id="@+id/tv_detalhes_planta"
+                android:id="@+id/tv_detalhes_planeta_natal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
-                android:textSize="16sp"
                 android:text="Tatooine"
-                />
+                android:textSize="16sp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
@@ -258,7 +257,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_altura"
+                    android:id="@+id/tv_detalhes_altura"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -287,7 +286,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_peso"
+                    android:id="@+id/tv_detalhes_peso"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -315,7 +314,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_genero"
+                    android:id="@+id/tv_detalhes_genero"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -343,7 +342,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_cabelo"
+                    android:id="@+id/tv_detalhes_cabelo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -372,7 +371,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_cor_pele"
+                    android:id="@+id/tv_detalhes_cor_pele"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -400,7 +399,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/id_detalhes_olhos"
+                    android:id="@+id/tv_detalhes_olhos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
