--- a/app/src/main/res/layout/content_recycler_list.xml
+++ b/app/src/main/res/layout/content_recycler_list.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:textAlignment="textEnd"
+        android:gravity="end"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_altura"
         app:layout_constraintHorizontal_weight="1"
@@ -75,6 +75,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="end"
         android:textAlignment="textEnd"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_genero"
@@ -106,6 +107,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="end"
         android:textAlignment="textEnd"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_peso"
@@ -121,6 +123,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="end"
         android:textAlignment="textEnd"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_nome"
